# graphicat_gl

./: CMakeLists.txt  vcpkg.json
example/: CMakeLists.txt
example/src/: main.cpp
glad/: CMakeLists.txt
glad/include/glad/: gl.h
src/graphicat/: graphicat.cpp  graphicat.hpp
src/graphicat/graphics/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp  vertex_array.cpp  vertex_array.hpp
src/graphicat/os/: window.cpp  window.hpp
